--- a/shopweb/.classpath
+++ b/shopweb/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" output="target/scala-2.10/test-classes" path="src/test/java"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-engine_2.10/0.1/jars/shift-engine_2.10.jar" sourcepath="/home/marius/work/shift/shift-engine/src/main"/>
-	<classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-common_2.10/0.1/jars/shift-common_2.10.jar"/>
+	<classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-common_2.10/0.1/jars/shift-common_2.10.jar" sourcepath="/home/marius/work/shift/shift-common/src/main/scala"/>
 	<classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.scala-incubator.io/scala-io-core_2.10/jars/scala-io-core_2.10-0.4.2.jar"/>
 	<classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.jsuereth/scala-arm_2.10/jars/scala-arm_2.10-1.3.jar"/>
 	<classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-template_2.10/0.1/jars/shift-template_2.10.jar" sourcepath="/home/marius/work/shift/shift-template/src/main"/>
