--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -4,3 +4,5 @@ smtp.server=smtp.googlemail.com
 smtp.port=465
 smtp.user=marius.danciu@gmail.com
 smtp.password=me@google
+smtp.bcc=aleena.danciu@gmail.com, marius.danciu@gmail.com
+smtp.from=vanzari@idid.ro
