--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -1,8 +1,8 @@
 host=idid.ro
 port=8887
-smtp.server=smtp.googlemail.com
-smtp.port=465
-smtp.user=marius.danciu@gmail.com
-smtp.password=me@google
-smtp.bcc=aleena.danciu@gmail.com, marius.danciu@gmail.com
-smtp.from=vanzari@idid.ro
+smtp.server=?
+smtp.port=?
+smtp.user=?
+smtp.password=/
+smtp.bcc=?
+smtp.from=?
