--- a/shopweb/config/log4j.properties
+++ b/shopweb/config/log4j.properties
@@ -1,9 +1,17 @@
 log4j.logger.net.shop=debug, file
 log4j.logger.net.shift=debug, file
+log4j.logger.stats=info, statsfile
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.maxFileSize=20MB
+log4j.appender.file.maxFileSize=50MB
 log4j.appender.file.File=./logs/idid.log
 log4j.appender.file.threshold=debug
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %t - %m%n
+
+log4j.appender.statsfile=org.apache.log4j.RollingFileAppender
+log4j.appender.statsfile.maxFileSize=50MB
+log4j.appender.statsfile.File=./data/stats/sales.csv
+log4j.appender.statsfile.threshold=debug
+log4j.appender.statsfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.statsfile.layout.ConversionPattern=%m%n
