--- a/shopweb/config/log4j.properties
+++ b/shopweb/config/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.file.layout.ConversionPattern=%d %t - %m%n
 
 log4j.appender.statsfile=org.apache.log4j.RollingFileAppender
 log4j.appender.statsfile.maxFileSize=50MB
-log4j.appender.statsfile.File=./data/stats/sales.csv
+log4j.appender.statsfile.File=./data/stats/sales.ujson
 log4j.appender.statsfile.threshold=debug
 log4j.appender.statsfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.statsfile.layout.ConversionPattern=%m%n
