--- a/shopweb/.classpath
+++ b/shopweb/.classpath
@@ -3,7 +3,6 @@
   <classpathentry kind="src" path="src/main/java" output="target/scala-2.10/classes"/>
   <classpathentry kind="src" path="src/test/scala" output="target/scala-2.10/test-classes"/>
   <classpathentry kind="src" path="src/test/java" output="target/scala-2.10/test-classes"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-engine_2.10/0.1/jars/shift-engine_2.10.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-common_2.10/0.1/jars/shift-common_2.10.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.scala-incubator.io/scala-io-core_2.10/jars/scala-io-core_2.10-0.4.2.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.jsuereth/scala-arm_2.10/jars/scala-arm_2.10-1.3.jar"/>
@@ -16,6 +15,7 @@
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-compiler/jars/scala-compiler-2.10.0.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-reflect/jars/scala-reflect-2.10.0.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/log4j/log4j/bundles/log4j-1.2.17.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-engine_2.10/0.1/jars/shift-engine_2.10.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-template_2.10/0.1/jars/shift-template_2.10.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-html_2.10/0.1/jars/shift-html_2.10.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-netty_2.10/0.1/jars/shift-netty_2.10.jar"/>
@@ -27,6 +27,7 @@
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.typesafe.akka/akka-actor_2.10/jars/akka-actor_2.10-2.4-SNAPSHOT.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-library/jars/scala-library-2.10.4.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.typesafe/config/bundles/config-1.2.1.jar"/>
+  <classpathentry kind="src" path="/shopapi" exported="true" combineaccessrules="false"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
