--- a/shopdatabase/.classpath
+++ b/shopdatabase/.classpath
@@ -1,31 +1,32 @@
 <classpath>
-  <classpathentry kind="src" path="src/main/scala" output="target/scala-2.10/classes"/>
-  <classpathentry kind="src" path="src/main/java" output="target/scala-2.10/classes"/>
-  <classpathentry kind="src" path="src/test/scala" output="target/scala-2.10/test-classes"/>
-  <classpathentry kind="src" path="src/test/java" output="target/scala-2.10/test-classes"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-common_2.10/0.1/jars/shift-common_2.10.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.scala-incubator.io/scala-io-core_2.10/jars/scala-io-core_2.10-0.4.2.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.jsuereth/scala-arm_2.10/jars/scala-arm_2.10-1.3.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.json4s/json4s-native_2.10/jars/json4s-native_2.10-3.2.5.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.json4s/json4s-core_2.10/jars/json4s-core_2.10-3.2.5.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.json4s/json4s-ast_2.10/jars/json4s-ast_2.10-3.2.5.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.thoughtworks.paranamer/paranamer/jars/paranamer-2.5.6.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mockito/mockito-all/jars/mockito-all-1.9.0.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scalap/jars/scalap-2.10.0.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-compiler/jars/scala-compiler-2.10.0.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-reflect/jars/scala-reflect-2.10.0.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/log4j/log4j/bundles/log4j-1.2.17.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.scala-incubator.io/scala-io-file_2.10/jars/scala-io-file_2.10-0.4.2.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/casbah-commons_2.10/jars/casbah-commons_2.10-2.6.4.jar"/>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.nscala-time/nscala-time_2.10/jars/nscala-time_2.10-0.2.0.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/joda-time/joda-time/jars/joda-time-2.1.jar"/>
+  <classpathentry kind="src" path="src/main/scala" output="target/scala-2.11/classes"/>
+  <classpathentry kind="src" path="src/main/java" output="target/scala-2.11/classes"/>
+  <classpathentry kind="src" path="src/test/scala" output="target/scala-2.11/test-classes"/>
+  <classpathentry kind="src" path="src/test/java" output="target/scala-2.11/test-classes"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-library/jars/scala-library-2.11.2.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/casbah-core_2.11/jars/casbah-core_2.11-2.7.3.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/casbah-commons_2.11/jars/casbah-commons_2.11-2.7.3.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.nscala-time/nscala-time_2.11/jars/nscala-time_2.11-1.0.0.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/joda-time/joda-time/jars/joda-time-2.3.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.joda/joda-convert/jars/joda-convert-1.2.jar"/>
   <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.6.0.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/mongo-java-driver/jars/mongo-java-driver-2.11.3.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/casbah-core_2.10/jars/casbah-core_2.10-2.6.4.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/casbah-query_2.10/jars/casbah-query_2.10-2.6.4.jar"/>
-  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/casbah-gridfs_2.10/jars/casbah-gridfs_2.10-2.6.4.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/mongo-java-driver/jars/mongo-java-driver-2.12.3.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.mongodb/casbah-query_2.11/jars/casbah-query_2.11-2.7.3.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/local/shift/shift-common_2.11/0.1/jars/shift-common_2.11.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.scala-incubator.io/scala-io-core_2.11/jars/scala-io-core_2.11-0.4.3.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang.modules/scala-parser-combinators_2.11/bundles/scala-parser-combinators_2.11-1.0.1.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.madgag/scala-arm_2.11/jars/scala-arm_2.11-1.3.3.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang.plugins/scala-continuations-library_2.11/bundles/scala-continuations-library_2.11-1.0.1.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.github.scala-incubator.io/scala-io-file_2.11/jars/scala-io-file_2.11-0.4.3.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.json4s/json4s-core_2.11/jars/json4s-core_2.11-3.2.10.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.json4s/json4s-ast_2.11/jars/json4s-ast_2.11-3.2.10.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/com.thoughtworks.paranamer/paranamer/jars/paranamer-2.6.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scalap/jars/scalap-2.11.0.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-compiler/jars/scala-compiler-2.11.0.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang/scala-reflect/jars/scala-reflect-2.11.0.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.1.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/org.json4s/json4s-native_2.11/jars/json4s-native_2.11-3.2.10.jar"/>
+  <classpathentry kind="lib" path="/home/marius/.ivy2/cache/log4j/log4j/bundles/log4j-1.2.17.jar"/>
   <classpathentry kind="src" path="/shopapi" exported="true" combineaccessrules="false"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
