--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-*.class
-*.log
-# sbt specific
-.cache
-.history
-.lib/
-dist/*
-target/
-bin/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-# Scala-IDE specific
-.scala_dependencies
-.worksheet
+.metadata
+**/target
+**/bin
+**/.cache
+**/.classpath
+**/.project
+
+
