--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -1,10 +1,10 @@
 db.host=localhost
 host=localhost
-port=8887
-smtp.server=?
-smtp.port=?
-smtp.user=?
-smtp.password=?
-smtp.bcc=?
-smtp.from=?
-admin.user=marius.danciu@gmail.com
+port=80
+smtp.server=smtp.zoho.com
+smtp.port=465
+smtp.user=office@idid.ro
+smtp.password=me@zoho.com
+smtp.bcc=valentina.danciu@gmail.com
+smtp.from=office@idid.ro
+admin.user=valentina.danciu@gmail.com
