--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -1,6 +1,6 @@
 db.host=localhost
-host=localhost
-port=80
+host=idid.ro
+port=8080
 smtp.server=smtp.zoho.com
 smtp.port=465
 smtp.user=office@idid.ro
