--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -7,4 +7,5 @@ smtp.user=office@idid.ro
 smtp.password=me@zoho.com
 smtp.bcc=valentina.danciu@gmail.com
 smtp.from=office@idid.ro
-admin.user=valentina.danciu@gmail.com
+admin.user=marius.danciu@gmail.com
+data.folder=../data
