--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -5,7 +5,7 @@ smtp.server=smtp.zoho.com
 smtp.port=465
 smtp.user=office@idid.ro
 smtp.password=me@zoho.com
-smtp.bcc=valentina.danciu@gmail.com
+smtp.bcc=office@idid.ro,valentina.danciu@gmail.com
 smtp.from=office@idid.ro
 admin.user=marius.danciu@gmail.com
 data.folder=../data
