--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -9,3 +9,4 @@ smtp.bcc=office@idid.ro,valentina.danciu@gmail.com
 smtp.from=office@idid.ro
 admin.user=marius.danciu@gmail.com
 data.folder=../data
+trace.uploads=true
