--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -1,4 +1,6 @@
 db.host=localhost
+db.user=idid
+db.port=27017
 host=idid.ro
 port=8080
 smtp.server=smtp.zoho.com
@@ -10,4 +12,3 @@ smtp.from=office@idid.ro
 admin.user=marius.danciu@gmail.com
 data.folder=../data
 trace.uploads=true
-db.user=idid
