--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -10,5 +10,5 @@ smtp.password=me@zoho.com
 smtp.bcc=office@idid.ro,valentina.danciu@gmail.com
 smtp.from=office@idid.ro
 admin.user=marius.danciu@gmail.com
-data.folder=../data
+data.folder=../../data
 trace.uploads=true
