--- a/shopweb/config/log4j.properties
+++ b/shopweb/config/log4j.properties
@@ -1,5 +1,5 @@
-log4j.logger.net.shop=error, file
-log4j.logger.net.shift=error, file
+log4j.logger.net.shop=debug, file
+log4j.logger.net.shift=debug, file
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.maxFileSize=50MB
