--- a/shopweb/config/log4j.properties
+++ b/shopweb/config/log4j.properties
@@ -1,3 +1,5 @@
+log4j.rootLogger=DEBUG, console
+
 log4j.logger.net.shop=debug, file
 log4j.logger.net.shift=debug, file
 
@@ -8,3 +10,6 @@ log4j.appender.file.threshold=debug
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %t - %m%n
 
+
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
