--- a/shopweb/config/log4j.properties
+++ b/shopweb/config/log4j.properties
@@ -2,6 +2,7 @@ log4j.rootLogger=DEBUG, console
 
 log4j.logger.net.shop=debug, file
 log4j.logger.net.shift=debug, file
+log4j.logger.http_server=debug, file
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.maxFileSize=50MB
@@ -13,3 +14,4 @@ log4j.appender.file.layout.ConversionPattern=%d %t - %m%n
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d %t - %m%n
