--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -2,9 +2,9 @@ db.host=localhost
 db.user=idid
 db.port=27017
 host=idid.ro
-http.bindAddress=0.0.0.0
-http.port=8080
-http.numThreads=50
+server.bindAddress=0.0.0.0
+server.port=8080
+server.numThreads=50
 smtp.server=smtp.zoho.com
 smtp.port=465
 smtp.user=office@idid.ro
