--- a/shopweb/config/config.properties
+++ b/shopweb/config/config.properties
@@ -11,6 +11,6 @@ smtp.user=office@idid.ro
 smtp.password=me@zoho.com
 smtp.bcc=office@idid.ro,valentina.danciu@gmail.com
 smtp.from=office@idid.ro
-admin.user=marius.danciu@gmail.com
+admin.user=marius.danciu@gmail.com, test@test.com
 data.folder=../data
 trace.uploads=true
