--- a/shopweb/config/log4j.properties
+++ b/shopweb/config/log4j.properties
@@ -1,8 +1,8 @@
 log4j.rootLogger=INFO, console
 
-log4j.logger.net.shop=INFO, file
-log4j.logger.net.shift=INFO, file
-log4j.logger.http_server=INFO, file
+log4j.logger.net.shop=DEBUG, file
+log4j.logger.net.shift=DEBUG, file
+log4j.logger.http_server=DEBUG, file
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.maxFileSize=50MB
