--- a/shopweb/config/.conf
+++ b/shopweb/config/.conf
@@ -3,11 +3,22 @@ db {
   user = idid
   port = 27017
 }
+
 server {
   bindAddress = 0.0.0.0
   port = 8080
   numThreads = 50
+
+  ssl {
+    port = 8443
+    numThreads = 30
+    keystore = .keystore
+    truststore = .truststore
+    pass = idid.1
+  }
 }
+
+
 smtp {
   server = smtp.zoho.com
   port = 465
@@ -16,7 +27,8 @@ smtp {
   bcc = office@idid.ro, valentina.danciu@gmail.com
   from = office@idid.ro
 }
-host=idid.ro
-admin.user=marius.danciu@gmail.com, test@test.com
-data.folder=../data
-trace.uploads=true
+
+host = idid.ro
+admin.user = marius.danciu@gmail.com, test@test.com
+data.folder = ../data
+trace.uploads = true
