--- a/shopweb/config/local.conf
+++ b/shopweb/config/local.conf
@@ -8,6 +8,14 @@ server {
   bindAddress = 0.0.0.0
   port = 8080
   numThreads = 50
+
+  ssl {
+    port = 8443
+    numThreads = 30
+    keystore = ../.keystore
+    truststore = ../.truststore
+    pass = idid.1
+  }
 }
 
 smtp {
