--- a/shopweb/config/.conf
+++ b/shopweb/config/.conf
@@ -23,7 +23,7 @@ smtp {
   server = smtp.zoho.com
   port = 465
   user = office@idid.ro
-  password = me@zoho.com
+  password = mail.idid
   bcc = office@idid.ro, valentina.danciu@gmail.com
   from = office@idid.ro
 }
