--- a/shopweb/config/local.conf
+++ b/shopweb/config/local.conf
@@ -22,7 +22,7 @@ smtp {
   server = smtp.zoho.com
   port = 465
   user = office@idid.ro
-  password = mmail.idid
+  password = mail.idid
   bcc = office@idid.ro, valentina.danciu@gmail.com
   from = office@idid.ro
 }
