--- a/shopweb/config/.conf
+++ b/shopweb/config/.conf
@@ -18,6 +18,9 @@ server {
   }
 }
 
+db {
+  url = mongodb://idid:qwer1234@idid-shard-00-00-ksqgy.mongodb.net:27017,idid-shard-00-01-ksqgy.mongodb.net:27017,idid-shard-00-02-ksqgy.mongodb.net:27017/?ssl=true&replicaSet=idid-shard-0&authSource=admin
+}
 
 smtp {
   server = smtp.zoho.com
