--- a/shopweb/config/local.conf
+++ b/shopweb/config/local.conf
@@ -27,6 +27,11 @@ smtp {
   from = office@idid.ro
 }
 
+db {
+  url = mongodb://idid:qwer1234@idid-shard-00-00-ksqgy.mongodb.net:27017,idid-shard-00-01-ksqgy.mongodb.net:27017,idid-shard-00-02-ksqgy.mongodb.net:27017/?ssl=true&replicaSet=idid-shard-0&authSource=admin
+}
+
+
 host=idid.ro
 admin.user=marius.danciu@gmail.com, test@test.com
 data.folder=../../data
