--- a/shopweb/config/.conf
+++ b/shopweb/config/.conf
@@ -32,6 +32,6 @@ smtp {
 }
 
 host = idid.ro
-admin.user = marius.danciu@gmail.com, test@test.com
+admin.users = marius.danciu@gmail.com, test@test.com
 data.folder = ../data
 trace.uploads = true
