--- a/shopweb/config/log4j.properties
+++ b/shopweb/config/log4j.properties
@@ -1,6 +1,6 @@
-log4j.rootLogger=INFO, console
+log4j.rootLogger=DEBUG, console
 
-log4j.logger.net.shop=INFO, file
+log4j.logger.net.shop=DEBUG, file
 log4j.logger.net.shift=INFO, file
 log4j.logger.http_server=INFO, file
 
