--- a/shopweb/config/local.conf
+++ b/shopweb/config/local.conf
@@ -33,6 +33,6 @@ db {
 
 
 host=idid.ro
-admin.user=marius.danciu@gmail.com, test@test.com
+admin.users=marius.danciu@gmail.com, test@test.com
 data.folder=../../data
 trace.uploads=true
